Kinda satisfied with the impl now, tho remember to check the TODOS and probably soft reset when you come back

--- a/Resources/Prototypes/Entities/Stations/base.yml
+++ b/Resources/Prototypes/Entities/Stations/base.yml
@@ -117,10 +117,11 @@
     laws: Crewsimov
 
 - type: entity
-  id: BaseStationNews
+  id: BaseStationApplications
   abstract: true
   components:
     - type: StationNews
+    - type: StationMessenger
 
 - type: entity
   id: BaseStationAllEventsEligible
