--- a/Resources/Prototypes/Device/devicenet_frequencies.yml
+++ b/Resources/Prototypes/Device/devicenet_frequencies.yml
@@ -114,21 +114,11 @@
   frequency: 1280
 
 - type: deviceFrequency
-  id: NTMessagesServer
+  id: NTMessengerServer
   name: device-frequency-prototype-name-nt-messages-server
   frequency: 2790
 
 - type: deviceFrequency
-  id: NTMessagesClient
+  id: NTMessengerClient
   name: device-frequency-prototype-name-nt-messages-client
   frequency: 2791
-
-- type: deviceFrequency
-  id: SyndicateMessagesServer
-  name: device-frequency-prototype-name-syndicate-messages-server
-  frequency: 2792
-
-- type: deviceFrequency
-  id: SyndicateMessagesClient
-  name: device-frequency-prototype-name-syndicate-messages-client
-  frequency: 2793
