--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -36,50 +36,23 @@
 
 - type: entity
   parent: BaseItem
-  id: MessagesCartridge
-  name: messages cartridge
-  description: A program for messageing other crew
+  id: MessengerCartridge
+  name: messenger cartridge
+  description: A program for messaging other crew
   components:
   - type: Sprite
     sprite: Objects/Devices/cartridge.rsi
     state: cart-y
   - type: UIFragment
-    ui: !type:MessagesUi
+    ui: !type:MessengerUi
   - type: Cartridge
-    programName: messages-program-name
-    icon:
-      sprite:  Objects/Misc/books.rsi
-      state: book_icon
-  - type: MessagesCartridge
+    programName: messenger-program-name
+    icon: Interface/Emotes/vocal.png
+  - type: MessengerClient
   - type: DeviceNetwork
     deviceNetId: Wireless
-    transmitFrequencyId: NTMessagesClient
-    receiveFrequencyId: NTMessagesServer
-    autoConnect: false
-  - type: StationLimitedNetwork
-
-- type: entity
-  parent: BaseItem
-  id: MessagesCartridgeSyndicate
-  name: syndicate messages cartridge
-  description: A program for messageing other syndicate agents
-  components:
-  - type: Sprite
-    sprite: Objects/Devices/cartridge.rsi
-    state: cart-y
-  - type: UIFragment
-    ui: !type:MessagesUi
-  - type: Cartridge
-    programName: messages-program-name
-    icon:
-      sprite:  Objects/Misc/books.rsi
-      state: book_icon
-  - type: MessagesCartridge
-  - type: DeviceNetwork
-    deviceNetId: Wireless
-    transmitFrequencyId: SyndicateMessagesClient
-    receiveFrequencyId: SyndicateMessagesServer
-    autoConnect: false
+    transmitFrequencyId: NTMessengerClient
+    receiveFrequencyId: NTMessengerServer
   - type: StationLimitedNetwork
 
 - type: entity
