--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -74,7 +74,7 @@
     preinstalled:
       - CrewManifestCartridge
       - NotekeeperCartridge
-      - MessagesCartridge
+      - MessengerCartridge
       - NewsReaderCartridge
     cartridgeSlot:
       priority: -1
@@ -670,7 +670,7 @@
     preinstalled:
       - CrewManifestCartridge
       - NotekeeperCartridge
-      - MessagesCartridge
+      - MessengerCartridge
       - NewsReaderCartridge
       - LogProbeCartridge
 
@@ -755,7 +755,6 @@
     uiKey: enum.PdaUiKey.Key
     preinstalled:
       - NotekeeperCartridge
-      - MessagesCartridgeSyndicate
     cartridgeSlot:
       priority: -1
       name: Cartridge
@@ -1057,7 +1056,7 @@
     uiKey: enum.PdaUiKey.Key
     preinstalled:
       - NotekeeperCartridge
-      - MessagesCartridge
+      - MessengerCartridge
     cartridgeSlot:
       priority: -1
       name: Cartridge
