--- a/Resources/Prototypes/Entities/Stations/nanotrasen.yml
+++ b/Resources/Prototypes/Entities/Stations/nanotrasen.yml
@@ -10,7 +10,7 @@
   id: StandardNanotrasenStation
   parent:
     - BaseStation
-    - BaseStationNews
+    - BaseStationApplications
     - BaseStationCargo
     - BaseStationJobsSpawning
     - BaseStationRecords
