Improve UIs, ditch cursed approach

--- a/Resources/Prototypes/Onboarding/onboadingCategories.yml
+++ b/Resources/Prototypes/Onboarding/onboadingCategories.yml
@@ -1,23 +1,17 @@
 - type: onboardingCategory
   id: None
   data:
-    name: None. I already know the whole game
+    name: No onboarding
     helpLevel: 0
 
 - type: onboardingCategory
   id: Basic
   data:
-    name: Basic. I know a lot of things about the game
+    name: Basic.
     helpLevel: 1
-
-- type: onboardingCategory
-  id: Medium
-  data:
-    name: Medium. I know a little about the game
-    helpLevel: 2
 
 - type: onboardingCategory
   id: Complete
   data:
-    name: Complete. I know nothing about the game
-    helpLevel: 3
+    name: Full tutorial
+    helpLevel: 2
